--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
    <head>
-      <title>Testing this shit</title>
+      <title>Connor "Underdisc" Deakin</title>
    </head>
    <body>
-      <img src="underdisc.jpg" alt="underdisc logo" /> <!-- alt is required -->
+      <img src="transparent_all.jpg" alt="underdisc logo" /> <!-- alt is required -->
    </body>
 </html>
