wrong file name

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
       <title>Connor "Underdisc" Deakin</title>
    </head>
    <body>
-      <img src="transparent_all.jpg" alt="underdisc logo" /> <!-- alt is required -->
+      <img src="transparent_all.png" alt="underdisc logo" /> <!-- alt is required -->
    </body>
 </html>
