Setting up content structure

--- a/Development/Project/index.html
+++ b/Development/Project/index.html
@@ -4,7 +4,9 @@
   </head>
   <body>
     <h1> Connor "Underdisc" Deakin </h1>
-    <p> <a href="Development/index.html">Development</a> </p>
-    <p> <a href="Game/index.html">Games</a> </p>
+    <p> Phonet Generator </p>
+    <p> Amperage </p>
+    <p> XCraft </p>
+    <p> <a href="../index.html">Back</a> </p>
   </body>
 </html>
