--- a/Game/PlanetCoaster/index.html
+++ b/Game/PlanetCoaster/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1> Connor "Underdisc" Deakin </h1>
-    <p> <a href="Development/index.html">Development</a> </p>
-    <p> <a href="Game/index.html">Games</a> </p>
+    <p> Rides </p>
+    <p> <a href="../index.html">Back</a> </p>
   </body>
 </html>
