--- a/Game/RocketLeague/index.html
+++ b/Game/RocketLeague/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1> Connor "Underdisc" Deakin </h1>
-    <p> <a href="Development/index.html">Development</a> </p>
-    <p> <a href="Game/index.html">Games</a> </p>
+    <p> <a href="https://www.youtube.com/watch?v=AAdUeeROApQ"> Year One </a> </p>
+    <p> <a href="../index.html">Back</a> </p>
   </body>
 </html>
