--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <html>
   <head>
-    <title>Connor "Underdisc" Deakin</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Connor Deakin</title>
   </head>
   <body>
-    <h1> Connor "Underdisc" Deakin </h1>
-    <p> <a href="Development/index.html">Development</a> </p>
-    <p> <a href="Game/index.html">Games</a> </p>
+    <div id="header_wrapper">
+      <div id="header">
+        <div class="banner_image">
+          <p class="title">Connor "Underdisc" Deakin</p>
+        </div>
+        <div class="menu_bar">
+          <table class="menu">
+            <tr>
+              <td class="menu_element">Home</td>
+              <td class="menu_element">Portfolio</td>
+              <td class="menu_element">Hobbies</td>
+              <td class="menu_element">Contact</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="home">
+      <div class="my_picture">
+        <img src="stormrunner.png">
+      </div>
+      <div class="content">
+        <p>Hello and thanks for visiting my website. I am the dude on the front
+        seat of a very good ride in Hershey, Pennsylvania named Stormrunner.</p>
+      </div>
+    </div>
   </body>
 </html>
