--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <title>Connor Deakin</title>
   </head>
   <body>
-    <div id="header_wrapper">
-      <div id="header">
-        <div class="banner_image">
-          <p class="title">Connor "Underdisc" Deakin</p>
-        </div>
-        <div class="menu_bar">
-          <table class="menu">
-            <tr>
-              <td class="menu_element">Home</td>
-              <td class="menu_element">Portfolio</td>
-              <td class="menu_element">Hobbies</td>
-              <td class="menu_element">Contact</td>
-            </tr>
-          </table>
+    <div id="header">
+      <div class="banner_image">
+        <div class="name">
+          <p>Connor <i>"Underdisc"</i> Deakin</p>
         </div>
       </div>
+      <div class="menu_bar">
+        <table class="menu">
+          <tr>
+            <td class="menu_element home">Home</td>
+            <td class="menu_element portfolio">Portfolio</td>
+            <td class="menu_element hobbies">Hobbies</td>
+            <td class="menu_element contact">Contact</td>
+          </tr>
+        </table>
+      </div>
     </div>
-    <div class="home">
+    <div class="main">
       <div class="my_picture">
         <img src="stormrunner.png">
       </div>
