--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
   <body>
     <div id="header">
       <div class="banner_image">
-        <div class="name">
-          <p>Connor <i>"Underdisc"</i> Deakin</p>
-        </div>
+        <img src="test.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
           <tr>
-            <td class="menu_element home">Home</td>
-            <td class="menu_element portfolio">Portfolio</td>
-            <td class="menu_element hobbies">Hobbies</td>
-            <td class="menu_element contact">Contact</td>
+            <td class="menu_element name">Connor "Underdisc" Deakin</td>
+            <td class="menu_element current">Home</td>
+            <td class="menu_element link">Portfolio</td>
+            <td class="menu_element link">Hobbies</td>
+            <td class="menu_element link">Contact</td>
           </tr>
         </table>
       </div>
