--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <img src="stormrunner.png">
       </div>
       <div class="content">
-        <p>Hello and thanks for visiting my website. I am the dude on the front
-        seat of a very good ride in Hershey, Pennsylvania named Stormrunner.</p>
+        <h1 class="content_header">Welcome Sandraker!</h1>
+        <p>Firstly, thanks for visiting my website. </p>
       </div>
     </div>
   </body>
