--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       </div>
     </div>
     <div class="main">
-      <div class="my_picture">
-        <img src="stormrunner.png">
-      </div>
       <div class="content">
-        <h1 class="content_header">Welcome Sandraker!</h1>
-        <p>Firstly, thanks for visiting my website. </p>
+        <h1 class="content_header">Welcome</h1>
+        <p>Thanks for visiting my website. I am a third year student at DigiPen:
+        Institute of Technology persuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
+        BSCS RTIS (Bachelors of Science in Computer Science in Real-Time Interactive
+        Simulation)</a> program.
       </div>
     </div>
   </body>
