--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="test.png">
+        <img src="Resources/test.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
           <tr>
-            <td class="menu_element name">Connor "Underdisc" Deakin</td>
-            <td class="menu_element current">Home</td>
-            <td class="menu_element link">Portfolio</td>
-            <td class="menu_element link">Hobbies</td>
-            <td class="menu_element link">Contact</td>
+            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer</td>
+          </tr>
+          <tr>
+            <td class="menu_element home current">Home</td>
+            <td class="menu_element portfolio link"><a href="Portfolio/index.html">Portfolio</a></td>
+            <td class="menu_element hobbies link">Hobbies</td>
+            <td class="menu_element contact link">Contact</td>
           </tr>
         </table>
       </div>
@@ -26,7 +28,9 @@
         <p>Thanks for visiting my website. I am a third year student at DigiPen:
         Institute of Technology persuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
         BSCS RTIS (Bachelors of Science in Computer Science in Real-Time Interactive
-        Simulation)</a> program.
+        Simulation)</a> program.</p>
+        <p>Applogies in advnace if the website is not great. I wrote it all in
+        html and css just to get the oppurtunity to learn some web development.</p>
       </div>
     </div>
   </body>
