New way to display portfolio pieces

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -23,30 +23,35 @@
       </div>
     </div>
     <div class="main">
+      <table class="piece">
+        <tr>
+          <td class="phonet_generator piece_element piece_language">C++</td>
+          <td class="phonet_generator piece_element piece_name">Phonet Generator</td>
+          <td class="phonet_generator piece_element piece_description">A commandline based multilingual word generator that creates new words using phonetics rather than syllables or characters.</td>
+          <td class="phonet_generator piece_element piece_more">More...</td>
+        </tr>
+      </table>
+      <!--
       <article class="piece">
-        <h1>PhonetGenerator</h1>
-        <p>A Multilingual Word Generator</p>
+        <p><span class="piece_name">Phonet Generator</span> - A multilingual word generator that creates new words using phonetics rather than syllables or just characters.</p>
       </article>
       <article class="piece">
-        <h1>Amperage</h1>
-        <p>A 2D game where you navigate a circuit as a charge</p>
+        <p><span class="piece_name">Ammperage</span> - A 2D puzzle game in which players must quickly navigate an electrical charge through circuit board puzzles.</p>
       </article>
       <article class="piece">
-        <h1>Fuzor</h1>
-        <p>Another 2D game</p>
+        <p><span class="piece_name">Fuzor</span> - A 2D platforming sidescroller where four players coorperate to exterminate an alien infestation from a ship.</p>
       </article>
       <article class="piece">
-        <h1>X-Craft</h1>
-        <p>Another 2D game custom engine</p>
+        <p><span class="piece_name">X-Craft</span> - A 2D top down boat game where two player need to work together to control a single ship.</p>
       </article>
       <article class="piece">
-        <h1>Graphics</h1>
-        <p>The graphics pipeline that was made for Xcraft</p>
+        <p><span class="piece_name">X-Craft Graphics</span> - The graphics pipeline that was built from the ground up using OpenGL to create X-Craft.</p>
       </article>
       <article class="piece">
         <h1>Code Samples</h1>
         <p>Selected samples of code that I have written over time.</p>
       </article>
+      -->
     </div>
   </body>
 </html>
