--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         Institute of Technology persuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
         BSCS RTIS (Bachelors of Science in Computer Science in Real-Time Interactive
         Simulation)</a> program.</p>
-        <p>Applogies in advnace if the website is not great. I wrote it all in
+        <p>Applogies in advance if the website is not great. I wrote it all in
         html and css just to get the oppurtunity to learn some web development.</p>
+        <h1 class="content_header">Short Auto-biography</h1>
       </div>
     </div>
   </body>
