Added more pieces

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -23,30 +23,52 @@
       </div>
     </div>
     <div class="main">
+      <!-- Phonet Generator -->
       <table class="piece">
         <tr>
-          <td class="phonet_generator piece_element piece_language">C++</td>
+          <td class="phonet_generator piece_element piece_language cpp">C++</td>
           <td class="phonet_generator piece_element piece_name">Phonet Generator</td>
           <td class="phonet_generator piece_element piece_description">A commandline based multilingual word generator that creates new words using phonetics rather than syllables or characters.</td>
           <td class="phonet_generator piece_element piece_more">More...</td>
         </tr>
       </table>
+      <!-- Amperage -->
+      <table class="piece">
+        <tr>
+          <td class="amperage piece_element piece_language zero">Zero Engine</td>
+          <td class="amperage piece_element piece_name">Amperage</td>
+          <td class="amperage piece_element piece_description">A top down 2D game where a player must quickly navigate through an imaginary circuit using an electrical charge.</td>
+          <td class="amperage piece_element piece_more">More...</td>
+        </tr>
+      </table>
+      <!-- Fuzor -->
+      <table class="piece">
+        <tr>
+          <td class="fuzor piece_element piece_language zero">Zero Engine</td>
+          <td class="fuzor piece_element piece_name">Fuzor</td>
+          <td class="fuzor piece_element piece_description">A 2D sidescrolling platformer where four players take control of heroes to exterminate an alien infestation from their ship.</td>
+          <td class="fuzor piece_element piece_more">More...</td>
+        </tr>
+      </table>
+      <!-- X-Craft -->
+      <table class="piece">
+        <tr>
+          <td class="xcraft piece_element piece_language cpp">C++</td>
+          <td class="xcraft piece_element piece_name">X-Craft</td>
+          <td class="xcraft piece_element piece_description">A top down 2D cooperative game in which two players take control of a futuristic boat in order to defeat their enemies.</td>
+          <td class="xcraft piece_element piece_more">More...</td>
+        </tr>
+      </table>
+      <!-- X-Craft Graphics -->
+      <table class="piece">
+        <tr>
+          <td class="xcraft piece_element piece_language cpp">C++</td>
+          <td class="xcraft piece_element piece_name">X-Craft Graphics</td>
+          <td class="xcraft piece_element piece_description"> A graphics pipeline that was built from the ground up using OpenGL and used to make X-Craft.</td>
+          <td class="xcraft piece_element piece_more">More...</td>
+        </tr>
+      </table>
       <!--
-      <article class="piece">
-        <p><span class="piece_name">Phonet Generator</span> - A multilingual word generator that creates new words using phonetics rather than syllables or just characters.</p>
-      </article>
-      <article class="piece">
-        <p><span class="piece_name">Ammperage</span> - A 2D puzzle game in which players must quickly navigate an electrical charge through circuit board puzzles.</p>
-      </article>
-      <article class="piece">
-        <p><span class="piece_name">Fuzor</span> - A 2D platforming sidescroller where four players coorperate to exterminate an alien infestation from a ship.</p>
-      </article>
-      <article class="piece">
-        <p><span class="piece_name">X-Craft</span> - A 2D top down boat game where two player need to work together to control a single ship.</p>
-      </article>
-      <article class="piece">
-        <p><span class="piece_name">X-Craft Graphics</span> - The graphics pipeline that was built from the ground up using OpenGL to create X-Craft.</p>
-      </article>
       <article class="piece">
         <h1>Code Samples</h1>
         <p>Selected samples of code that I have written over time.</p>
