--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -11,7 +11,7 @@
       <div class="menu_bar">
         <table class="menu">
           <tr>
-            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer</td>
+            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer, Nerd</td>
           </tr>
           <tr>
             <td class="menu_element home link"><a href="../index.html">Home</a></td>
@@ -68,12 +68,24 @@
           <td class="xcraft piece_element piece_more">More...</td>
         </tr>
       </table>
-      <!--
-      <article class="piece">
-        <h1>Code Samples</h1>
-        <p>Selected samples of code that I have written over time.</p>
-      </article>
-      -->
+      <!-- Water -->
+      <table class="piece">
+        <tr>
+          <td class="water piece_element piece_language cpp">C++</td>
+          <td class="water piece_element piece_name">Water</td>
+          <td class="water piece_element piece_description"> An ocean editor that uses an implementation of gerstner waves and perlin noise in order to make a custom ocean surface.</td>
+          <td class="water piece_element piece_more">More...</td>
+        </tr>
+      </table>
+      <!-- Code Samples -->
+      <table class="piece">
+        <tr>
+          <td class="water piece_element piece_language cpp">C++</td>
+          <td class="water piece_element piece_name">Code Samples</td>
+          <td class="water piece_element piece_description"> Selected Samples of code that I have written over time.</td>
+          <td class="water piece_element piece_more">More...</td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
