--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="menu_bar">
         <table class="menu">
           <tr>
-            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer</td>
+            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer, Nerd</td>
           </tr>
           <tr>
             <td class="menu_element home current">Home</td>
