More button working

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="../Resources/test.png">
+        <img src="../Resources/fahrenheit.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
@@ -29,7 +29,8 @@
           <td class="phonet_generator piece_element piece_language cpp">C++</td>
           <td class="phonet_generator piece_element piece_name">Phonet Generator</td>
           <td class="phonet_generator piece_element piece_description">A commandline based multilingual word generator that creates new words using phonetics rather than syllables or characters.</td>
-          <td class="phonet_generator piece_element piece_more">More...</td>
+          <td class="phonet_generator piece_element piece_more"><div><a href="PhonetGenerator/index.html">More...</a></div>
+          </td>
         </tr>
       </table>
       <!-- Amperage -->
@@ -82,7 +83,7 @@
         <tr>
           <td class="water piece_element piece_language cpp">C++</td>
           <td class="water piece_element piece_name">Code Samples</td>
-          <td class="water piece_element piece_description"> Selected Samples of code that I have written over time.</td>
+          <td class="water piece_element piece_description"> Selected samples of code that I have written over time.</td>
           <td class="water piece_element piece_more">More...</td>
         </tr>
       </table>
