--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="Resources/test.png">
+        <img src="Resources/fahrenheit.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
