--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../Resources/master.css">
+    <link rel="stylesheet" href="portfolio.css">
     <title>Connor Deakin</title>
   </head>
   <body>
@@ -29,7 +30,7 @@
           <td class="phonet_generator piece_element piece_language cpp">C++</td>
           <td class="phonet_generator piece_element piece_name">Phonet Generator</td>
           <td class="phonet_generator piece_element piece_description">A commandline based multilingual word generator that creates new words using phonetics rather than syllables or characters.</td>
-          <td class="phonet_generator piece_element piece_more"><div><a href="PhonetGenerator/index.html">More...</a></div>
+          <td class="phonet_generator piece_element piece_more"><div><a href="PhonetGenerator/phonet_generator.html">More...</a></div>
           </td>
         </tr>
       </table>
