--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Resources/master.css">
     <title>Connor Deakin</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
           </tr>
           <tr>
             <td class="menu_element home current">Home</td>
-            <td class="menu_element portfolio link"><a href="Portfolio/index.html">Portfolio</a></td>
+            <td class="menu_element portfolio link"><a href="Portfolio/portfolio.html">Portfolio</a></td>
             <td class="menu_element hobbies link">Hobbies</td>
             <td class="menu_element contact link">Contact</td>
           </tr>
