Portfolio design getting there

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="Resources/master.css">
+    <link rel="stylesheet" href="index.css">
     <title>Connor Deakin</title>
   </head>
   <body>
