testing em values

--- a/Portfolio/PhonetGenerator/phonet_generator.html
+++ b/Portfolio/PhonetGenerator/phonet_generator.html
@@ -60,7 +60,7 @@
         digging, I learned a lot about phonetics and its presence in the English language. This is what lead
         me to work on this small project.</p>
         <p>When I started to work on this program, the intension was to have it generate words or names that
-        could or already does exist in the English language. As I continued to work on the project and became more
+        could or already do exist whithin the English language. As I continued to work on the project and became more
         familiar with phonetics, I realized that this could work with any language due to the simplicity of phonetics.
         I later decided to expand the program to allow for multiple languages because of this.</p>
         <h1 class="content_header">Looking Back</h1>
