--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="main">
       <div class="content">
-        <h1 class="content_header">Welcome dfsf</h1>
+        <h1 class="content_header">Welcome</h1>
         <p>Thanks for visiting my website. I am a third year student at DigiPen:
         Institute of Technology persuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
         BSCS RTIS (Bachelors of Science in Computer Science in Real-Time Interactive
