--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <div class="content">
         <h1 class="content_header">Welcome</h1>
         <p>Thanks for visiting my website. I am a third year student at DigiPen:
-        Institute of Technology persuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
+        Institute of Technology pursuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
         BSCS RTIS (Bachelors of Science in Computer Science in Real-Time Interactive
         Simulation)</a> program.</p>
-        <p>Applogies in advance if the website is not great. I wrote it all in
+        <p>Appologies in advance if the website is not great. I wrote it all in
         html and css just to get the oppurtunity to learn some web development.</p>
         <h1 class="content_header">Short Auto-biography</h1>
       </div>
