--- a/Portfolio/PhonetGenerator/phonet_generator.html
+++ b/Portfolio/PhonetGenerator/phonet_generator.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <link rel="stylesheet" href="../../Resources/master.css">
-    <link rel="stylesheet" href="phonet_generator.css">
+    <link rel="stylesheet" href="../Resources/master_piece.css">
     <title>Connor Deakin</title>
   </head>
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="Resources/banner.png">
+        <img src="banner.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="description">
-      <h1 class="content_header">The Phonet Generator</h1>
+      <h1 class="main_header content_header">The Phonet Generator</h1>
         <p>The Phonet Generator is a multilingual word and name generator that uses phonetics when performing
         the random generation. You can use and find out more about the Phonet Generator from
         the links below.</p>
