--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -40,7 +40,7 @@
           <td class="amperage piece_element piece_language zero">Zero Engine</td>
           <td class="amperage piece_element piece_name">Amperage</td>
           <td class="amperage piece_element piece_description">A top down 2D game where a player must quickly navigate through an imaginary circuit using an electrical charge.</td>
-          <td class="amperage piece_element piece_more">More...</td>
+          <td class="amperage piece_element piece_more"><div><a href="Amperage/amperage.html">More...</a></div></td>
         </tr>
       </table>
       <!-- Fuzor -->
