--- a/Portfolio/PhonetGenerator/phonet_generator.html
+++ b/Portfolio/PhonetGenerator/phonet_generator.html
@@ -58,7 +58,7 @@
       </div>
     </div>
     <div class="description">
-      <h1 class="content_header">Story</h1>
+      <h1 class="content_header">Why a Word Generator?</h1>
       <p>One day whilst attempting to come up with a name for the engine I was going to begin working on,
       I came across the idea of creating a program that could do the job for me. Many name generators have been
       create befored, so I wanted to find a generation method that I had not yet seen. After research and
@@ -70,13 +70,13 @@
       I later decided to expand the program to allow for multiple languages because of this.</p>
       <h1 class="content_header">Looking Back</h1>
       <p>One of my favorite parts about making this project was the jump it allowed me to notice in my programming skills.
-      I first started working on it in the Summer of 2016. During that time. I workd on the Program for a week and
+      I first started working on it in the Summer of 2016. During that time. I worked on the Program for a week and
       accomplished what I thought had been a decent amount of features.</p>
-      <p>I never finished the project at the time and it had always been begging me to finish it since then. A year later,
+      <p>I never finished the project at the time and I had always wanted to since a stopped. A year later,
       I came back to finish the project and create the rules feature. The amount of work I was able to get done within a
       short two hours of work was almost comparable to what had taken a week before. Looking back at what had taken
-      me a week to write a year ago felt embarressing.This shift allowed me to notice
-      how much faster and more percise of a programmer I had become after a year of CS assignments and an entire C++ game.</p>
+      me a week to write a year ago felt embarressing. This shift made it apparent that I had become a
+      much faster and more percise programmer after a year of CS assignments and an entire C++ game.</p>
     </div>
   </body>
 </html>
