Started contact page

--- a/Portfolio/Amperage/amperage.html
+++ b/Portfolio/Amperage/amperage.html
@@ -18,7 +18,7 @@
             <td class="menu_element home link"><a href="../../index.html">Home</a></td>
             <td class="menu_element portfolio link"><a href="../portfolio.html">Portfolio</a></td>
             <td class="menu_element hobbies link">Hobbies</td>
-            <td class="menu_element contact link">Contact</td>
+            <td class="menu_element contact link"><a href="../../Contact/contact.html">Contact</a></td>
           </tr>
         </table>
       </div>
@@ -31,7 +31,7 @@
         about Amperage and the Zero Engine from the links below.</p>
       <ul>
         <li><a href="https://games.digipen.edu/games/amperage#.WZeCvVGGPcs">Amperage on DigiPen's Game Gallery</a></li>
-        <li><a href="https://games.digipen.edu/games/amperage#.WZeCvVGGPcs">Download Amperage Installer</a></li>
+        <li><a href="amperage_setup.exe" download>Download Amperage Installer</a></li>
         <li><a href="https://zero.digipen.edu/">Zero Engine</a></li>
       </ul>
       <iframe class="youtube_video" src="https://youtube.com/embed/94QWQpbxsO8" allowfullscreen></iframe>
@@ -67,7 +67,7 @@
       </div>
     </div>
     <div class="description">
-      
+
     </div>
   </body>
 </html>
