--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <td class="menu_element home current">Home</td>
             <td class="menu_element portfolio link"><a href="Portfolio/portfolio.html">Portfolio</a></td>
             <td class="menu_element hobbies link">Hobbies</td>
-            <td class="menu_element contact link">Contact</td>
+            <td class="menu_element contact link"><a href="Contact/contact.html">Contact</a></td>
           </tr>
         </table>
       </div>
