A ton of portfolio stuff

--- a/Portfolio/Amperage/amperage.html
+++ b/Portfolio/Amperage/amperage.html
@@ -67,7 +67,53 @@
       </div>
     </div>
     <div class="description">
-
+      <h1 class="content_header">Circuit Boards?</h1>
+      <p>Amperage was the first game I worked on and completed during my time at DigiPen.
+      Before DigiPen, I actually made a few games in Visual Basic, but to show them off
+      now would be embarressing. Unlike most of the memories that students associate with
+      their first game at DigiPen, I have fond memories of creating Amperage.
+      The game was made in the GAM 100 class, the very first game class that most students at DigiPen take.</p>
+      <p>At the time, I was also in one of the entry level design classes. In the
+      class, one of our assignments was to work on a weekly design log. Every week,
+      we had to create a game concept and write up a very bare bones GDD. And when
+      I say "very bare bones", I mean it. Well, for the very first assignment,
+      I wrote up the simple GDD that turned into Amperage. I actually
+      still have a copy of the assignment. If you're interested, you can find the original
+      pencil and paper GDD for Amperage here.</p>
+      <h1 class="content_header">Creating Circuit Boards</h1>
+      <p>While creating this game, I worked as both a designer and a programmer.
+      When students come into DigiPen, they are not expected to have an experience
+      with game development or programming. Luckily, I had been taking programming
+      classes since my sophomore year of highschool. Because of this, the scripting
+      came to me very easily, allowing me to take two roles on the project.</p>
+      <p>One of the first tasks I did on the project was implementing the core mechanics.
+      This involved implenting the basic motion of the charge on the cirucit board and
+      how if interacts with parts of the circuit board. My primary goal was to create a toolset
+      that would allow Dylan and I to go into the Zero Engine editor and easily create levels
+      without even touching the scripts that ran them.</p>
+      <p>Once we had the core features implemented and some art to pretty up the environment,
+      we were free to create any levels we could come up with. The process for this level creation was
+      very unique and entertaining. My method for creating the levels was to first
+      draw out the entire level on graph paper so I could quickly change and edit
+      problems I noticed while drawing. Once I had the idea layed out on paper, the
+      next step was to put it into the engine and playtest it. I also have some copies
+      of these paper prototypes still. If you're interested you can find them here.</p>
+      <h1 class="content_header">Looking Back</h1>
+      <p>Whilst this project wasn't too bad for a first DigiPen game, there are definitely
+      parts that could have been done differently to make the project go more smoothly than
+      it did. For one, we were using SVN at the time. Now, after two years of using Git, I can safely say
+      that using SVN is probably not the best choice. Additionally,
+      with the amount of programming experience I have now, I can think of ways
+      to implement this game that would improve the rate at which a designer could
+      create and test the level by twice the speed that we worked with.</p>
+      <p>However, the biggest benefit this game brought was the team aspect.
+      Before Amperage, I had never worked with a group of people on any software
+      project. Though the project was almost purely stomping grounds for us, my teammates
+      and I pulled a lot of experience about what it's like to work with a team. This
+      can be anything from having team meetings to going out on a team lunch. Bear in mind
+      this was our first team project, so we were not at the stage where we were thinking about
+      the process of it all just yet.</p>
+      <p></p>
     </div>
   </body>
 </html>
