--- a/Portfolio/PhonetGenerator/phonet_generator.html
+++ b/Portfolio/PhonetGenerator/phonet_generator.html
@@ -72,7 +72,7 @@
       <p>One of my favorite parts about making this project was the jump it allowed me to notice in my programming skills.
       I first started working on it in the Summer of 2016. During that time. I worked on the Program for a week and
       accomplished what I thought had been a decent amount of features.</p>
-      <p>I never finished the project at the time and I had always wanted to since a stopped. A year later,
+      <p>I never finished the project at the time and I had always wanted to since I stopped. A year later,
       I came back to finish the project and create the rules feature. The amount of work I was able to get done within a
       short two hours of work was almost comparable to what had taken a week before. Looking back at what had taken
       me a week to write a year ago felt embarressing. This shift made it apparent that I had become a
