--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -29,7 +29,7 @@
         <tr>
           <td class="phonet_generator piece_element piece_language cpp">C++</td>
           <td class="phonet_generator piece_element piece_name">Phonet Generator</td>
-          <td class="phonet_generator piece_element piece_description">A commandline based multilingual word generator that creates new words using phonetics rather than syllables or characters.</td>
+          <td class="phonet_generator piece_element piece_description">A commandline based, multilingual word generator that creates new words using phonetics rather than syllables or characters.</td>
           <td class="phonet_generator piece_element piece_more"><div><a href="PhonetGenerator/phonet_generator.html">More...</a></div>
           </td>
         </tr>
@@ -39,7 +39,7 @@
         <tr>
           <td class="amperage piece_element piece_language zero">Zero Engine</td>
           <td class="amperage piece_element piece_name">Amperage</td>
-          <td class="amperage piece_element piece_description">A top down 2D game where a player must quickly navigate through an imaginary circuit using an electrical charge.</td>
+          <td class="amperage piece_element piece_description">A top down, 2D game where a player must quickly navigate through an imaginary circuit using an electrical charge.</td>
           <td class="amperage piece_element piece_more"><div><a href="Amperage/amperage.html">More...</a></div></td>
         </tr>
       </table>
@@ -48,8 +48,8 @@
         <tr>
           <td class="fuzor piece_element piece_language zero">Zero Engine</td>
           <td class="fuzor piece_element piece_name">Fuzor</td>
-          <td class="fuzor piece_element piece_description">A 2D sidescrolling platformer where four players take control of heroes to exterminate an alien infestation from their ship.</td>
-          <td class="fuzor piece_element piece_more">More...</td>
+          <td class="fuzor piece_element piece_description">A 2D, sidescrolling platformer where four players take control of heroes to escape an alien infestation from their ship.</td>
+          <td class="fuzor piece_element piece_more"><div><a href="Fuzor/fuzor.html">More...</a></div></td>
         </tr>
       </table>
       <!-- X-Craft -->
@@ -57,17 +57,8 @@
         <tr>
           <td class="xcraft piece_element piece_language cpp">C++</td>
           <td class="xcraft piece_element piece_name">X-Craft</td>
-          <td class="xcraft piece_element piece_description">A top down 2D cooperative game in which two players take control of a futuristic boat in order to defeat their enemies.</td>
-          <td class="xcraft piece_element piece_more">More...</td>
-        </tr>
-      </table>
-      <!-- X-Craft Graphics -->
-      <table class="piece">
-        <tr>
-          <td class="xcraft piece_element piece_language cpp">C++</td>
-          <td class="xcraft piece_element piece_name">X-Craft Graphics</td>
-          <td class="xcraft piece_element piece_description"> A graphics pipeline that was built from the ground up using OpenGL and used to make X-Craft.</td>
-          <td class="xcraft piece_element piece_more">More...</td>
+          <td class="xcraft piece_element piece_description">A top down, 2D, cooperative game in which two players take control of a futuristic boat in order to defeat their enemies.</td>
+          <td class="xcraft piece_element piece_more"><div><a href="XCraft/xcraft.html">More...</a></div></td></td>
         </tr>
       </table>
       <!-- Water -->
@@ -76,7 +67,7 @@
           <td class="water piece_element piece_language cpp">C++</td>
           <td class="water piece_element piece_name">Water</td>
           <td class="water piece_element piece_description"> An ocean editor that uses an implementation of gerstner waves and perlin noise in order to make a custom ocean surface.</td>
-          <td class="water piece_element piece_more">More...</td>
+          <td class="water piece_element piece_more"><div><a href="Water/water.html">More...</a></div></td>
         </tr>
       </table>
       <!-- Code Samples -->
@@ -85,7 +76,7 @@
           <td class="water piece_element piece_language cpp">C++</td>
           <td class="water piece_element piece_name">Code Samples</td>
           <td class="water piece_element piece_description"> Selected samples of code that I have written over time.</td>
-          <td class="water piece_element piece_more">More...</td>
+          <td class="water piece_element piece_more"><div><a href="CodeSamples/codesamples.html">More...</a></div></td>
         </tr>
       </table>
     </div>
