--- a/index.html
+++ b/index.html
@@ -29,10 +29,35 @@
         <p>Thanks for visiting my website. I am a third year student at DigiPen:
         Institute of Technology pursuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
         BSCS RTIS (Bachelors of Science in Computer Science in Real-Time Interactive
-        Simulation)</a> program.</p>
+        Simulation)</a> program in order to break my way into the games industry.</p>
         <p>Appologies in advance if the website is not great. I wrote it all in
-        html and css just to get the oppurtunity to learn some web development.</p>
+        html and css just to get the opportunity to learn some web development.</p>
         <h1 class="content_header">Short Auto-biography</h1>
+        <p>Before considering a career in games, I was first fascinated by the
+        roller coaster manufacturing industry. This passion first arose because my older brother
+        introduced me to the first game I played, Roller Coaster Tycoon. It wasn't until
+        many years later that I decided to change this decision, however I still keep up with
+        the roller coaster industry to this day.</p>
+        <p> Many years later, I saw a trailer for a PS3 exclusive named
+        <a href="https://en.wikipedia.org/wiki/ModNation_Racers">Modnation Racers.</a>
+        At the time, I didn't have a PS3 to play the game with, but
+        I got one with the specific intention of playing Modnation Racers. I played
+        the game almost everyday for a couple of years. It was the primary game that
+        got me interested into the design section of the games industry. At the time
+        I was also taking programming classes in highschool, but they didn't interest
+        me as much as they do today.</p>
+        <p>Once I knew I was going to make my way into games, I found a school by the name of DigiPen
+        in Redmond, Washington. In my senior year of high school, I applied to the
+        <a href="https://www.digipen.edu/academics/degree-programs/ba-game-design/">
+        BAGD (Bachelors of Arts in Game Design)</a> program and was accepted into the school.
+        After going through the first year of the program, I was not happy with the skills I was
+        getting out of the design classes. Additionally, the
+        math and science started to gather my interest as I watched
+        my CS friends develop into great programmers. This encouraged me to eventually switch
+        to the BSCS RTIS program. Though the design classes gave me many
+        skills that most programmers do not have, after two years of being an RTIS,
+        I can say with the utmost certainty that pursuing a programming degree was
+        the correct choice for me.</p>
       </div>
     </div>
   </body>
